update bake ai link

--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       <div class="footer-links">
         <a href="https://github.com/BakeLens/crust">GitHub</a>
         <span class="sep">&middot;</span>
-        <a href="https://getcrust.io">getcrust.io</a>
+        <a href="https://bakeai.inc/">Built by Bake AI</a>
       </div>
       <p class="copyright">&copy; 2026 Bake AI Inc.</p>
     </footer>
